--- a/index.html
+++ b/index.html
@@ -6,11 +6,33 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous"> 
 </head>
 <body>
-    <h1>This is Bootstrap course</h1>
-    <h2>Learn new insights!</h2>
+    <h1 class="m-5 text-center">This is Bootstrap course</h1>
+    <h2 class="text-center">Learn new insights!</h2>
     <p class="display-1">This is p tag with display-1</p>
     <p class="lead">This is lead class</p>
     <p>This is regular p tag</p>
+    <p class="text-center">This sentence is important</p>
+    <span class="text-primary">Primary color:Blue</span>
+    <br>
+    <br>
+    <button class="btn btn-primary">Login</button>
+    <br>
+    <br>
+    <button class="btn btn-danger">Sign Up</button> <br> <br>
+    <button class="btn btn-outline-success btn-lg">Submit</button>
+    <br>
+    <br>
+    <div class="btn-group">
+        <button class="btn btn-primary">Home</button>
+        <button class="btn btn-success">Login</button>
+        <button class="btn btn-danger">Logout</button>
+    </div>
+    <br>
+    <br>
+    <span class="Shadow">Shadow will be appeared</span>
+    <br>
+    <br>
+    <span class="border rounded ">make a border</span>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </html>
